--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
-    "test": "jest"
+    "test": "jest",
+    "build-search-index": "cat data/companies.json | node build-search-index.js > data/search.json"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "lunr": "^2.3.9",
+    "nuxt": "^2.14.6",
+    "vue-i18n": "^8.22.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
@@ -23,6 +26,7 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
